--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/motion": "^2.0.0-beta.12",
     "preline": "^1.8.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
